fix: scrolling when mobile banner is visible

--- a/sample-apps/react/react-video-demo/src/components/Layout/LobbyLayout/LobbyLayout.module.css
+++ b/sample-apps/react/react-video-demo/src/components/Layout/LobbyLayout/LobbyLayout.module.css
@@ -11,6 +11,10 @@
   grid-template-areas: 'body';
 }
 
+.mobileBannerVisible {
+  height: calc(100vh - 80px);
+}
+
 @media screen(md) {
   .layoutContainer {
     @apply grid relative z-10 w-full;
